--- a/data.ipynb
+++ b/data.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,17 +12,49 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Define the API endpoint URL\n",
-    "url = 'https://api.semanticscholar.org/graph/v1/paper/search'"
+    "url = 'https://api.semanticscholar.org/graph/v1/paper/search'\n",
+    "\n",
+    "# Directly define the API key (Reminder: Securely handle API keys in production environments)\n",
+    "api_key = 'zRjnP89HI697jM02sRqJjX9LgSItJSta3PDJUVN2'  # Replace with the actual API key"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Match entre nombre del articulo y el articulo\n",
+    "\n",
+    "# Define the API endpoint URL\n",
+    "url = 'https://api.semanticscholar.org/graph/v1/paper/search'\n",
+    "\n",
+    "# More specific query parameter\n",
+    "query_params = {'query': 'DEEM: a Tool for the Dependability Modeling and Evaluation'}\n",
+    "\n",
+    "# Define headers with API key\n",
+    "headers = {'x-api-key': api_key}\n",
+    "\n",
+    "# Send the API request\n",
+    "response = requests.get(url, params=query_params, headers=headers)\n",
+    "\n",
+    "# Check response status\n",
+    "if response.status_code == 200:\n",
+    "   response_data = response.json()\n",
+    "   # Process and print the response data as needed\n",
+    "   print(response_data)\n",
+    "else:\n",
+    "   print(f\"Request failed with status code {response.status_code}: {response.text}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -61,7 +93,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -112,6 +144,21 @@
     "else:\n",
     "  print(f\"No se pudo descargar el artículo con el DOI '{doi}'.\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'total': 1, 'offset': 0, 'data': [{'paperId': 'cbdd2e8eb9c88871bafe50ba2fae6d9d0221c8d5', 'title': 'DEEM: a tool for the dependability modeling and evaluation of multiple phased systems'}]}\n"
+     ]
+    }
+   ],
+   "source": []
   }
  ],
  "metadata": {
