--- a/data.ipynb
+++ b/data.ipynb
@@ -25,14 +25,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'total': 1, 'offset': 0, 'data': [{'paperId': 'cbdd2e8eb9c88871bafe50ba2fae6d9d0221c8d5', 'title': 'DEEM: a tool for the dependability modeling and evaluation of multiple phased systems'}]}\n"
+     ]
+    }
+   ],
    "source": [
+    "#QUERY\n",
     "#Match entre nombre del articulo y el articulo\n",
-    "\n",
-    "# Define the API endpoint URL\n",
-    "url = 'https://api.semanticscholar.org/graph/v1/paper/search'\n",
     "\n",
     "# More specific query parameter\n",
     "query_params = {'query': 'DEEM: a Tool for the Dependability Modeling and Evaluation'}\n",
